Conversion boxes accept color lists. UI cleanuo

--- a/ColorGradient.ini
+++ b/ColorGradient.ini
@@ -1,7 +1,7 @@
 [ui]
-model = OKLCH
+model = oklch
 format = RGB 0-1
-color_a = #f5787a
-color_b = #f2b53f
-converter_hex = #ff00ff
+color_a = #0086eb
+color_b = #edac00
+converter_hex = #010001
 
