Separated to modules. Added resources and requirements.txt

--- a/ColorGradient.ini
+++ b/ColorGradient.ini
@@ -1,7 +1,7 @@
 [ui]
 model = lch
 format = RGB 0-1
-color_a = #0086eb
-color_b = #edac00
+color_a = #d500d2
+color_b = #95e600
 converter_hex = #010001
 
