Code audit complete. We should now be safe from implicit changes and hard-coded defaults.

--- a/ColorGradient.ini
+++ b/ColorGradient.ini
@@ -1,7 +1,12 @@
 [ui]
 model = lch
 format = RGB 0-1
-color_a = #d500d2
-color_b = #95e600
+color_a = #f60186
+color_b = #7e2f8a
+color_c = #808080
 converter_hex = #010001
+three_mode = false
+ab_count = 5
+ac_count = 2
+cb_count = 2
 
