Gui updates: white borders on master tiles, rounded corners.

--- a/ColorGradient.ini
+++ b/ColorGradient.ini
@@ -1,12 +1,15 @@
 [ui]
-model = lch
+model = oklch
 format = RGB 0-1
 color_a = #f60186
-color_b = #7e2f8a
+color_b = #225cff
 color_c = #808080
 converter_hex = #010001
 three_mode = false
-ab_count = 5
+ab_count = 6
 ac_count = 2
 cb_count = 2
+swatch_gap = 9
+master_tile_border_color = #E3E3E3
+tile_border_radius = 6
 
