--- a/ColorGradient.ini
+++ b/ColorGradient.ini
@@ -1,14 +1,14 @@
 [ui]
-model = oklch
-format = RGB 0-1
-color_a = #f60186
-color_b = #225cff
-color_c = #808080
-converter_hex = #010001
+model = srgb
+format = Hex
+color_a = #288ceb
+color_b = #e15e1e
+color_c = #aae800
+converter_hex = #003cf1\n#5831ee\n#802bdf\n#a029c8\n#ba28ab\n#ce2d8b\n#db386a\n#e24947\n#e15e1e
 three_mode = false
-ab_count = 6
-ac_count = 2
-cb_count = 2
+ab_count = 7
+ac_count = 3
+cb_count = 4
 swatch_gap = 9
 master_tile_border_color = #E3E3E3
 tile_border_radius = 6
