--- a/.gitignore
+++ b/.gitignore
@@ -1,27 +1,118 @@
-# Local environment variables
-.env
-.DS_Store
+# Byte-compiled / optimized / DLL files
 __pycache__/
-*.pyc
-*.pyo
-*.pyd
+*.py[cod]
+*$py.class
+*.so
+
+# Distribution / packaging
 .Python
+build/
+develop-eggs/
+dist/
+downloads/
+eggs/
+.eggs/
+lib/
+lib64/
+parts/
+sdist/
+var/
+wheels/
+pip-wheel-metadata/
+share/python-wheels/
+*.egg-info/
+.installed.cfg
+*.egg
+MANIFEST
 
-env/
+# PyInstaller
+#  Usually these files are written by a python script from a template
+#  before PyInstaller builds the exe, so as to inject date/other infos into it.
+*.manifest
+*.spec.bak
+# PyInstaller build directories
+build/
+dist/
+
+# Installer logs
+pip-log.txt
+pip-delete-this-directory.txt
+
+# Virtual environments
 .env
+.venv
+env/
 venv/
-.venv/
+ENV/
+env.bak/
+venv.bak/
 
-*.json
+# IDEs and editors
+.vscode/settings.json
+.vscode/launch.json
+.vscode/tasks.json
+.vscode/.ropeproject
+.idea/
+*.swp
+*.swo
+*~
+
+# macOS
+.DS_Store
+.DS_Store?
+._*
+.Spotlight-V100
+.Trashes
+ehthumbs.db
+Thumbs.db
+
+# Windows
+desktop.ini
+*.cab
+*.msi
+*.msm
+*.msp
+*.lnk
+
+# Testing
 .pytest_cache/
+.coverage
+htmlcov/
+.tox/
+.nox/
+.cache
+nosetests.xml
+coverage.xml
+*.cover
+*.py,cover
+.hypothesis/
+
+# Temporary files
+*.tmp
+*.temp
+*.log
+*.bak
+*.swp
+*~
+
+# Project-specific temporary directories
 images_temp/**
 backup/**
 temp/**
 tmp/**
-*.zip
 SaveOutput/**
 
-# Keep .github and .clinerules tracked
+# Archives
+*.zip
+*.tar.gz
+*.rar
+*.7z
+
+# Local configuration that shouldn't be tracked
+*.local
+.env.local
+
+# Keep important configuration files and directories tracked
 !.github/
 !.github/**
 !.clinerules/
@@ -30,3 +121,11 @@ SaveOutput/**
 !.continue/**
 !.vscode/
 !.vscode/**
+
+# Keep PyInstaller spec files (these should be tracked)
+!*.spec
+
+# Keep requirements and build scripts
+!requirements.txt
+!build.sh
+!BUILD.md
