--- a/ColorGradient.ini
+++ b/ColorGradient.ini
@@ -1,12 +1,12 @@
 [ui]
 model = srgb
-format = Hex
+format = RGB 256
 color_a = #288ceb
 color_b = #e15e1e
 color_c = #aae800
-converter_hex = #003cf1\n#5831ee\n#802bdf\n#a029c8\n#ba28ab\n#ce2d8b\n#db386a\n#e24947\n#e15e1e
+converter_hex = #288ceb\n#7284d5\n#987cbc\n#b5739e\n#cc6975\n#e15e1e
 three_mode = false
-ab_count = 7
+ab_count = 4
 ac_count = 3
 cb_count = 4
 swatch_gap = 9
