UI tweaks (naming, padding, scrollbars etc.)

--- a/ColorGradient.ini
+++ b/ColorGradient.ini
@@ -1,12 +1,12 @@
 [ui]
-model = srgb
-format = RGB 256
-color_a = #288ceb
-color_b = #e15e1e
-color_c = #aae800
-converter_hex = #288ceb\n#7284d5\n#987cbc\n#b5739e\n#cc6975\n#e15e1e
+model = lch
+format = RGB 0-1
+color_a = #1366db
+color_b = #ce30d3
+color_c = #e7b900
+converter_hex = #1366db\n#aae800\n#b5d203\n#c0b906\n#ca9a09\n#d3700c\n#dc000e
 three_mode = false
-ab_count = 4
+ab_count = 1
 ac_count = 3
 cb_count = 4
 swatch_gap = 9
