Done tweaking tooltips.

--- a/ColorGradient.ini
+++ b/ColorGradient.ini
@@ -1,14 +1,14 @@
 [ui]
-model = lch
+model = oklch
 format = RGB 0-1
 color_a = #1366db
-color_b = #ce30d3
-color_c = #e7b900
-converter_hex = #1366db\n#aae800\n#b5d203\n#c0b906\n#ca9a09\n#d3700c\n#dc000e
+color_b = #d56172
+color_c = #99e64f
+converter_hex = #1366db\n#665dda\n#9258cb\n#b256b1\n#c85892\n#d56172
 three_mode = false
 ab_count = 4
 ac_count = 3
-cb_count = 1
+cb_count = 2
 swatch_gap = 9
 master_tile_border_color = #E3E3E3
 tile_border_radius = 6
